--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,8 @@ dist.dir=dist
 dist.jar=${dist.dir}/SistemaEvaluacionTuristica.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.derby.jar=lib\\derby.jar
+file.reference.derbyclient.jar=lib\\derbyclient.jar
 file.reference.jcommon-1.0.23.jar=lib\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19.jar
 includes=**
@@ -34,7 +36,9 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.derby.jar}:\
+    ${file.reference.derbyclient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
